--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon"
-      },
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/msiqueiraa/CrudNode.git"
@@ -19,8 +19,8 @@
   "homepage": "https://github.com/msiqueiraa/CrudNode#readme",
   "dependencies": {
     "express": "^4.18.1",
-    "mongoose": "^5.13.15"
-   
+    "mongoose": "^5.13.15",
+    "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
